--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
   "homepage": "https://github.com/sibarchanKods/little-money-backend#readme",
   "dependencies": {
     "axios": "^1.8.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9"
   }
 }
